# cxx_course

./: README.md
10_ranges/: README.md
10_ranges/examples/: 01_ranges_algorithms.cpp  02_ranges_projection.cpp  03_views_filter_transform_take.cpp  04_views_iota_drop_reverse.cpp  05_views_lazy_and_mutation.cpp  06_ranges_copy_materialize.cpp  07_span_basics.cpp  08_span_subviews.cpp  09_concepts_basics.cpp  10_concepts_range_printer.cpp  11_concepts_custom.cpp  12_format_basics.cpp  13_source_location_logger.cpp  14_more_projection.cpp  a.out
1_basics/theory/: 10_io.cpp  11_io_line.cpp  12_io_c.cpp  13_io_buffered.cpp  14_if.cpp  15_chars.cpp  16_enums.cpp  1_python_init.py  2_lc.cpp  3_types.cpp  4_signed.cpp  5_signed.cpp  6_overflow.cpp  6_uverflow.cpp  7_memory.cpp  8_correct_init.cpp  9_ub.cpp  9_usb.cpp
2/: 2_lc.cpp  4_references.cpp  8_funcs.cpp
2_pointers/: 0_cmp.cpp  11_array.cpp  1_priority.cpp  3_pointers.cpp  5_const.cpp  6_cstr.cpp  7_stdstr.cpp  9_increment.cpp  a.out
3_classes/: 00_cli.cpp  01_array.cpp  02_array_to_func.cpp  03_classes.cpp  04_const_mutable.cpp  05_explicit.cpp  06_class_array.cpp  08_lambda_comp.cpp  09_operators.cpp  10_vector.cpp  11_vector_realloc.cpp  12_array.cpp  13_pair_tuple.cpp
3_classes/tasks/: remove_smiles.cpp  shift.cpp
4_memory/: 0_stack_mem.cpp  10_iterator_arithmetic.cpp  11_map_basics.cpp  12_maps_diff.cpp  13_map_it.cpp  1_stack_limit.cpp  2_stack_linear.cpp  3_heap.cpp  4_new_array.cpp  5_delete_array.cpp  6_ctor_dtor.cpp  7_iter_array.cpp  8_iterator.cpp  9_iterator_cycle.cpp  a.out  array_task.cpp  vector_task.cpp
5_project/: 1_cli.cpp  2_bmp_headers.cpp  3_write_header.cpp  a.out
5_project/4_cmake_sample/: CMakeLists.txt  app
5_project/4_cmake_sample/lib/: CMakeLists.txt  bmp_io.cpp  bmp_io.h
6_inheritance/: 01_access_inheritance.cpp  02_runtime_polymorphism.cpp  03_vtable.cpp  04_multiple_inheritance.cpp  05_mixin.cpp  06_object_slicing.cpp  07_hiding_overloads.cpp  08_virtual_in_ctor.cpp  09_nvi_idiom.cpp  10_diamond_virtual_inheritance.cpp  11_smart_pointers_polymorphism.cpp  12_templates_basics.cpp  13_template_specialization.cpp  13_templates_header_only_explained.cpp  14_template_deduction.cpp  14_template_specialization.cpp  15_factory.cpp  15_template_deduction.cpp  a.out
7_exceptions/: 1_1_return.cpp  1_2_ptr.cpp  1_3_optional.cpp  1_4_expected.cpp  2_exception.cpp  2_without.cpp  3_raii.cpp  4_errors.cpp  5_noexcept.cpp  6_1_opt_copy.cpp  6_1_opt_nocopy.cpp  6_1_opt_ref.cpp  7_more_one.cpp  a.out  exception  exception_bin  expected_bin  without  without_bin
8_cmake/1_simple/: CMakeLists.txt  a.out  main.cpp
8_cmake/2_with_lib/: CMakeLists.txt  main.cpp
8_cmake/3_shared/: CMakeLists.txt
8_cmake/4_dynamic/: CMakeLists.txt  main.cpp
9_tests/project/: CMakeLists.txt
9_tests/project/data/: greeting_expected.txt
9_tests/project/examples/01_plain_assert/: test_plain_assert.cpp
9_tests/project/examples/02_gtest_expect_eq/: test_expect_eq.cpp
9_tests/project/examples/03_gtest_exceptions/: test_exceptions.cpp
9_tests/project/examples/04_gtest_assert_before_index/: test_assert_before_index.cpp
9_tests/project/examples/05_private_fields/: counter.h  test_friend_access.cpp  test_public_api_instead.cpp
9_tests/project/examples/06_parameterized/: test_parameterized.cpp
9_tests/project/examples/07_file_reading/: test_file_reading.cpp
9_tests/project/examples/08_snapshot/: test_snapshot.cpp
9_tests/project/examples/09_catch/: test_catch.cpp
9_tests/project/examples/10_setup/: test_setup.cpp
9_tests/project/src/: config_reader.cpp  config_reader.h  main.cpp  math_utils.cpp  math_utils.h  text_formatter.cpp  text_formatter.h
9_tests/project_catch/: CMakeLists.txt
9_tests/project_gtest/: CMakeLists.txt
9_tests/project_gtest/src/: math_utils.cpp  math_utils.h
9_tests/project_gtest/tests/: test_math_gtest.cpp
